--- a/src/index.html
+++ b/src/index.html
@@ -1,20 +1,18 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <title>Front</title>
+    <base href="/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-<head>
-  <meta charset="utf-8">
-  <title>Front</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- forzar tema blanco en navegadores configurados con tema oscuro -->
+    <meta name="color-scheme" content="only light" />
 
-  <!-- forzar tema blanco en navegadores configurados con tema oscuro -->
-  <meta name="color-scheme" content="only light">
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+  </head>
 
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-
-<body>
-  <app-root></app-root>
-</body>
-
+  <body>
+    <app-root></app-root>
+  </body>
 </html>
